--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <form >
             <label>
                 <input type="text" name="" id="">
+                <input type="text" name="" id="">
             </label>
         </form>
     </main>
